objects/pse__VersionItem_ResourceRequest__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a resource request taken at the time the version is created.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <inlineHelpText>The account name for the resource request referenced in the version.</inlineHelpText>
        <label>Account</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AssignmentId__c</fullName>
        <inlineHelpText>The assignment ID for the resource request referenced in the version.</inlineHelpText>
        <label>Assignment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AssignmentName__c</fullName>
        <inlineHelpText>The assignment name for the resource request referenced in the version.</inlineHelpText>
        <label>Assignment Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The end date for the resource request referenced in the version.</description>
        <inlineHelpText>The end date for the resource request referenced in the version.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneId__c</fullName>
        <inlineHelpText>The milestone ID for the resource request referenced in the version.</inlineHelpText>
        <label>Milestone Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneName__c</fullName>
        <inlineHelpText>The milestone name for the resource request referenced in the version.</inlineHelpText>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedById__c</fullName>
        <inlineHelpText>The created by user ID for the resource request referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedByName__c</fullName>
        <inlineHelpText>The created by user name for the resource request referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedDate__c</fullName>
        <description>The original created date for the resource request referenced in the version.</description>
        <inlineHelpText>The original created date for the resource request referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original ID of the resource request referenced in the version.</description>
        <inlineHelpText>The original ID of the resource request referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedById__c</fullName>
        <inlineHelpText>The modified by user ID for the resource request referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedByName__c</fullName>
        <inlineHelpText>The modified by user name for the resource request referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the resource request referenced in the version.</description>
        <inlineHelpText>The original last modified date of the resource request referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerId__c</fullName>
        <inlineHelpText>The owner ID for the resource request referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerName__c</fullName>
        <inlineHelpText>The owner name for the resource request referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The percent allocated for the resource request referenced in the version.</description>
        <inlineHelpText>The percent allocated for the resource request referenced in the version.</inlineHelpText>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Request_Priority__c</fullName>
        <description>The request priority for the resource request referenced in the version.</description>
        <inlineHelpText>The request priority for the resource request referenced in the version.</inlineHelpText>
        <label>Request Priority</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Requested_Bill_Rate__c</fullName>
        <inlineHelpText>The requested bill rate for the resource request referenced in the version.</inlineHelpText>
        <label>Requested Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__ResourceId__c</fullName>
        <description>The suggested resource ID on the resource request referenced in the version.</description>
        <inlineHelpText>The suggested resource ID on the resource request referenced in the version.</inlineHelpText>
        <label>Suggested Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ResourceName__c</fullName>
        <description>The suggested resource name on the resource request referenced in the version.</description>
        <inlineHelpText>The suggested resource name on the resource request referenced in the version.</inlineHelpText>
        <label>Suggested Resource Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ResourceRequestId__c</fullName>
        <description>The resource request name for the resource request referenced in the version.</description>
        <inlineHelpText>The system-generated resource request name for the resource request referenced in the version.</inlineHelpText>
        <label>Resource Request Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The resource held for the resource request referenced in the version.</inlineHelpText>
        <label>Resource Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Name__c</fullName>
        <description>The resource request name for the resource request referenced in the version.</description>
        <inlineHelpText>The resource request name for the resource request referenced in the version.</inlineHelpText>
        <label>Resource Request Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <description>The resource role for the resource request referenced in the version.</description>
        <inlineHelpText>The resource role for the resource request referenced in the version.</inlineHelpText>
        <label>Resource Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__SOW_Hours__c</fullName>
        <description>The requested hours for the resource request referenced in the version.</description>
        <inlineHelpText>The requested hours for the resource request referenced in the version.</inlineHelpText>
        <label>Requested Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_ResourceId__c</fullName>
        <description>The resource ID on the resource request referenced in the version.</description>
        <inlineHelpText>The resource ID on the resource request referenced in the version.</inlineHelpText>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_ResourceName__c</fullName>
        <description>The resource name on the resource request referenced in the version.</description>
        <inlineHelpText>The resource name on the resource request referenced in the version.</inlineHelpText>
        <label>Resource Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The start date for the resource request referenced in the version.</description>
        <inlineHelpText>The start date for the resource request referenced in the version.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the Version.</description>
        <inlineHelpText>A lookup to the Version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Resource Requests</relationshipLabel>
        <relationshipName>VersionItem_ResourceRequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Resource Request</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVRR-{0000}</displayFormat>
        <label>Version Item Resource Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Resource Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>